updated serveral sections of my portfolio

--- a/src/template.html
+++ b/src/template.html
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
     <!-- Put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title>Justin C. Alcendor | Developer</title>
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Improve your SEO by adding a small descrption of you -->
@@ -46,13 +46,13 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is <span class="text-color-main">Justin Alcendor</span>
           <br />
-          I'm the Unknown Developer.
+          I'm the Developer that you need.
         </h1>
         <p class="hero-cta" class="load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
-            >Know more</a
+            >Hire Me</a
           >
         </p>
       </div>
@@ -71,7 +71,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="assets/profile.jpg"
+                src="assets/profile1.jpg"
                 alt="Profile Image"
               />
             </div>
@@ -79,11 +79,16 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you can!
+                I am self-taught developer who is adaptable. Thinking outside of the box is one of my strongest assets.
+                I have the basic knowledge and fundamentals of HTML, CSS, JavaScript, Github, Git, React, Node.js, and Bootstrap, beginner level knowledge of Android Development, and intermediate level knowledge of Java SE.
+                I am very passionate about creating websites and web APIs that can be useful to someone else life and I will exceed expectations to complete any tasks that is placed in front of me. I will ask a ton of questions 
+                until I fully understand everything I need to complete the task.
+                
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                My goal is to be a Junior Front End Developer and work my way up the ladder through hardwork and being open minded. 
+                I am a huge Baltimore Ravens fan. I also enjoy playing basketball, lifting weights, spending time with my beautiful and inspiring wife, Brittini, as well as playing MMOs and MOBAs video games, such as 
+                Final Fantasy XIV, League of Legends and DOTA 2.
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -112,7 +117,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">Robofriends</h3>
                 <div>
                   <p class="mb-4">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -147,7 +152,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/banner.png"
                     />
                   </div>
                 </a>
@@ -261,12 +266,12 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
+          <p class="contact-wrapper__text">Email Me!</p>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
+            href="mailto:kareem4209@gmail.com"
             >Call to Action</a
           >
         </div>
@@ -281,16 +286,16 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://www.twitter.com/kareem4285/" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
-            <i class="fa fa-codepen fa-inverse"></i>
+          <a rel="noreferrer" href="https://www.facebook.com/justin.alcendor" target="_blank">
+            <i class="fa fa-facebook fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://www.linkedin.com/in/justin-alcendor-16a738131/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://www.github.com/kareem42" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -300,32 +305,8 @@
         <!-- If you give me some credit, will be huge for me :) -->
         <p class="footer__text">
           © 2021 - Template developed by
-          <a rel="noreferrer" href="https://github.com/cobidev" target="_blank"
-            >Jacobo Martínez</a
-          >
-        </p>
-
-        <!-- Remove this paragraph once you setup your custom portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobidev/simplefolio on GitHub"
-            >Star</a
+          <a rel="noreferrer" href="https://github.com/kareem42" target="_blank"
+            >Jacobo Martinez</a
           >
         </p>
       </div>
